# ocr-nameplates-czai

./: .gitignore  CMakeLists.txt
executable/: CMakeLists.txt  demo-wrz.cpp  demo.cpp
include/CuizhouOcr/: InfoTable.h  KeyValuePair.h  OcrHandler.h  OcrNameplates.h  OcrNameplatesAlfa.h  OcrUtils.hpp
include/PvaDetector/: PvaDetector.h
include/cuizhou-ocr/: InfoTable.h  InfoTable.hpp  OcrHandler.h  OcrNameplates.h  OcrNameplatesAlfa.h  OcrUtils.hpp  ocr-nameplates-alfa.h  ocr-nameplates.h  ocr-utils.hpp
include/cuizhou_ocr/: classname_dict.hpp  collage.hpp  enum_hasher.hpp  enum_hashmap.hpp  info_table.hpp  key_value_detection.h  key_value_pair.h  ocr_handler.h  ocr_interface.h  ocr_interface.hpp  ocr_nameplates.h  ocr_nameplates_alfa.h  ocr_utils.hpp  perspective_transform.h
include/cuizhou_ocr/data_aux/: classname_dict.hpp  collage.hpp  keyvalue_detection.h  ocr_detection.h
include/cuizhou_ocr/data_utils/: cv_extension.h  data_proc.hpp  enum_hashmap.hpp  perspective_transform.h
include/cuizhou_ocr/data_utils/impl/: data_proc.impl.hpp  enum_hashmap.impl.hpp
include/cuizhou_ocr/datamodel/: keyvalue_detection.h  ocr_detection.h
include/cuizhou_ocr/ocr_aux/: classname_dict.hpp  collage.hpp  detection_proc.h  keyvalue_detection.h  ocr_detection.h
include/cuizhou_ocr/ocr_aux/impl/: classname_dict.impl.hpp  collage.impl.hpp
include/cuizhou_ocr/ocr_implementation/: ocr_handler.h  ocr_nameplate.h  ocr_nameplate_alfa.h  ocr_nameplate_alfaromeo.h  ocr_nameplate_volkswagen.h  ocr_utils.hpp  ocr_with_result_as_table.h
include/cuizhou_ocr/utils/: cv_extension.h  data_proc.hpp  data_processing.hpp  enum_hashmap.hpp  perspective_transform.h
include/cuizhou_ocr/utils/impl/: data_proc.impl.hpp  enum_hashmap.impl.hpp
include/googlenet/: classifier.h
include/mlmodel/: classification.h  classifier.h  detection.h  detector.h  mlmodel.h
include/pvadetector/: PvaDetector.h  detection.h  detector.h  pvadetector.h
scripts/cropping-labeled-images/update-xml/: pascal_voc_io.py  trans_voc_box.py
scripts/cropping_roi/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  ocr_interface.cpp
src/CuizhouOcr/: InfoTable.cpp  KeyValuePair.cpp  OcrHandler.cpp  OcrNameplates.cpp  OcrNameplatesAlfa.cpp  OcrUtils.cpp
src/PvaDetector/: Detection.cpp  PvaDetector.cpp  pvaDetector.cpp
src/cuizhou-ocr/: InfoTable.cpp  OcrHandler.cpp  OcrNameplates.cpp  OcrNameplatesAlfa.cpp  OcrUtils.cpp  info-table.cpp  ocr-handler.cpp  ocr-nameplates-alfa.cpp  ocr-nameplates.cpp  ocr-utils.cpp
src/cuizhou_ocr/: collage.cpp  info_table.cpp  key_value_pair.cpp  ocr_handler.cpp  ocr_interface.cpp  ocr_nameplates.cpp  ocr_nameplates_alfa.cpp  ocr_utils.cpp  perspective_transform.cpp
src/cuizhou_ocr/data_utils/: cv_extension.cpp  data_proc.cpp  perspective_transform.cpp
src/cuizhou_ocr/datamodel/: keyvalue_detection.cpp  ocr_detection.cpp
src/cuizhou_ocr/ocr_aux/: detection_proc.cpp  keyvalue_detection.cpp  ocr_detection.cpp
src/cuizhou_ocr/ocr_implementation/: ocr_handler.cpp  ocr_nameplate.cpp  ocr_nameplate_alfa.cpp  ocr_nameplate_alfaromeo.cpp  ocr_nameplate_volkswagen.cpp  ocr_utils.cpp  ocr_with_result_as_table.cpp
src/cuizhou_ocr/utils/: cv_extension.cpp  data_proc.cpp  data_processing.cpp  perspective_transform.cpp
src/googlenet/: classifier.cpp
src/mlmodel/: classifier.cpp  detector.cpp  mlmodel.cpp
src/pvadetector/: Detection.cpp  detection.cpp  detector.cpp  pvadetector.cpp
